Fixed spacing on contact form

--- a/src/patterns/contactform/ContactForm.scss
+++ b/src/patterns/contactform/ContactForm.scss
@@ -281,6 +281,7 @@ form fieldset button {
     outline: none;
     box-shadow: 1px 5px 32px 0px rgba(0, 0, 0, 0.17);
     padding: 0.5em 1.45em;
+    margin-bottom: 0;
 
     &:hover {
         background: #293445;
@@ -293,6 +294,7 @@ form fieldset button {
         min-height: 70px;
         font-size: 1.25em;
         padding: 0.5em 1.8em;
+        margin-bottom: 0;
     }
 }
 
