--- a/src/templates/contact.scss
+++ b/src/templates/contact.scss
@@ -34,6 +34,7 @@
         justify-items: stretch;
         column-gap: 10%;
         padding: 1.5em 0 0 0;
+        margin-bottom: 0;
     }
 
     .content-list .content-block.contact-block .link::before {
